--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,20 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - WDS_SOCKET_HOST=localhost
+      - REACT_APP_BACKEND_URL=http://localhost:5000
+    depends_on:
+      - backend
     stdin_open: true
-    tty: true 
+    tty: true
+    
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./backend:/app
+    environment:
+      - FLASK_ENV=development
+      - FLASK_DEBUG=1 
