--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - CHOKIDAR_USEPOLLING=true
-      - WDS_SOCKET_HOST=localhost
-      - REACT_APP_BACKEND_URL=http://localhost:5000
+      CHOKIDAR_USEPOLLING: "true"
+      WDS_SOCKET_HOST: "localhost"
+      REACT_APP_BACKEND_URL: "http://localhost:5001"
     depends_on:
       - backend
     stdin_open: true
@@ -24,9 +24,12 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "5001:5000"
     volumes:
       - ./backend:/app
     environment:
-      - FLASK_ENV=development
-      - FLASK_DEBUG=1 
+      FLASK_ENV: development
+      FLASK_DEBUG: 1
+      OPENAI_API_KEY: "sk-or-vv-2aceb7e2b8d4521e26637b8fce102ac02fc1687a6622dabc9d324a46d5f1a1c9"
+      OPENAI_API_BASE_URL: "https://api.vsegpt.ru/v1"
+      OPENAI_MODEL_NAME: "google/gemini-2.5-flash-pre"
